Fixed previous page showing on first page, redirecting to a non-existing page, fixed previous page button not showing up on last page

--- a/css/game.css
+++ b/css/game.css
@@ -70,7 +70,7 @@
 
 .game-button {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 /* CSS for dev-page */
